fixed image alignment

--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ body {
   }
 
   img {
-    width: 80%;
+    width: 90%;
     margin-top: 40px;
     margin-left: 30px;
     border-radius: 10px;
